test/regress/coverage-value-round-string-error.test
; Coverage for value.cc lines 1809, 1812-1813:
; Calling rounded() on a string value triggers the default case in
; in_place_round_to_commodity_precision, which throws an error since
; only INTEGER, AMOUNT, BALANCE, and SEQUENCE types can be rounded.

2024/01/01 Test
    Expenses:Food    $100.00
    Assets:Cash

test bal Expenses --format "%(rounded(\"hello\"))\n" -> 1
__ERROR__
While evaluating value expression:
  rounded("hello")
  ^^^^^^^^^^^^^^^^
While rounding hello to commodity precision:
While calling function 'rounded hello':
Error: Cannot round a string to commodity precision
end test
